# ChangeLog for media-libs/gst-plugins-base
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.78 2008/04/15 11:48:51 zaheerm Exp $

*gst-plugins-base-0.10.19 (15 Apr 2008)

  15 Apr 2008; Zaheer Merali <zaheerm@gentoo.org> 
  +gst-plugins-base-0.10.19.ebuild:
  version bump

  14 Apr 2008; Ferris McCormick <fmccor@gentoo.org>
  gst-plugins-base-0.10.17.ebuild:
  Sparc stable, required for Security Bug #217609.

  14 Apr 2008; Markus Rothe <corsair@gentoo.org>
  gst-plugins-base-0.10.17.ebuild:
  Stable on ppc64

  02 Feb 2008; Samuli Suominen <drac@gentoo.org>
  -files/gst-plugins-base-0.10.15-netinet.patch,
  -gst-plugins-base-0.10.15.ebuild:
  Remove unused version.

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gst-plugins-base-0.10.15.ebuild:
  revert stable x86

  01 Feb 2008; Samuli Suominen <drac@gentoo.org>
  -files/gst-plugins-base-0.10.4-typefindfunctions-m4v-NULL-terminator.diff,
  -files/gst-plugins-base.audioresample.patch,
  -gst-plugins-base-0.10.4-r1.ebuild, -gst-plugins-base-0.10.6.ebuild,
  -gst-plugins-base-0.10.7.ebuild, -gst-plugins-base-0.10.8.ebuild,
  -gst-plugins-base-0.10.9.ebuild, -gst-plugins-base-0.10.10.ebuild,
  -gst-plugins-base-0.10.11.ebuild, -gst-plugins-base-0.10.12.ebuild,
  -gst-plugins-base-0.10.16.ebuild:
  Remove unused versions.

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gst-plugins-base-0.10.15.ebuild:
  stable x86, bug 208366

*gst-plugins-base-0.10.17 (31 Jan 2008)

  31 Jan 2008; Zaheer Merali <zaheerm@gentoo.org> 
  +gst-plugins-base-0.10.17.ebuild:
  version bump

*gst-plugins-base-0.10.16 (29 Jan 2008)

  29 Jan 2008; Zaheer Merali <zaheerm@gentoo.org> 
  +gst-plugins-base-0.10.16.ebuild:
  version bump

  20 Nov 2007; Joe Peterson <lavajoe@gentoo.org>
  +files/gst-plugins-base-0.10.15-netinet.patch,
  gst-plugins-base-0.10.15.ebuild:
  Patch to build on FreeBSD (bug #199630)
