@@ -4,8 +4,8 @@ AUX gst-plugins-base-0.10.19-interix5.patch 701 RMD160 0bb9c82e91b69d35b6745ad93
 DIST gst-plugins-base-0.10.14.tar.bz2 1625388 RMD160 507666ea6d2a4657d315dfe54c8869ab74a59351 SHA1 54e7b2d482f6eef4dbbe7d4b5f59ada033e447ab SHA256 ffd88d23227f54aae30fdc0ef60ea8eaffe8cc03c069b234ed23c4ea82dcff46
 DIST gst-plugins-base-0.10.17.tar.bz2 1849092 RMD160 0fce21511768becc6a4f744d53335bffe84afbf9 SHA1 a1187d686eabc980cd28ffa610e026e8855507e7 SHA256 f82cfd5669c756726f503dde5936e2fbe2969631095f0efc40df1fae1a74f70d
 DIST gst-plugins-base-0.10.19.tar.bz2 1910649 RMD160 c452c1e6fe3365baac5d9d0540f5b0ffae0f3e35 SHA1 4d133c00faaa4b3234727b03ec57d338f69deb32 SHA256 45dee132437b942fd02eafc6d0f7b57a026033a5abd04eb70b4287259991e173
-EBUILD gst-plugins-base-0.10.14.ebuild 1410 RMD160 1c5fae39a0979cb54d3d7ed590190bfea05ff2fb SHA1 02de9f754ed964cdc4187da4889021868d82e275 SHA256 9ec0120d93e460830dccb31519195e946317453fc8007986137fcd9aa5b0f4a4
-EBUILD gst-plugins-base-0.10.17.ebuild 1383 RMD160 baa26694aeb80410f21c67e61dcd19cba8321d5f SHA1 021501724c15ef56db80633fbdb7309cdbca0114 SHA256 5629e68d202f05114d5d33c888e6aff4d719c33131689d2a10501e03868d6c89
-EBUILD gst-plugins-base-0.10.19.ebuild 1463 RMD160 b20af5f145ad12aebae1fd4030cf732f48f54038 SHA1 e675001b429788f78f8dca2bdb0bf723806a9719 SHA256 3c000c9aeeedf006ed74389345bb8e119be36e151c300560893ccf10b10edd14
-MISC ChangeLog 10757 RMD160 7cd4e2e2f7732e75fc6a13078e28909a1d841354 SHA1 ff3c69d13f8347bb795a2922ebb2819b28dd5f50 SHA256 31586c2537f75a6e4679510e2f1bdc5b4c74ddccb21e2e6a0b3112879243548b
+EBUILD gst-plugins-base-0.10.14.ebuild 1398 RMD160 4a95189ddafaf8906ac1798ba9b1b301947db12f SHA1 cf333ead9dbcd0c2ffeaed2c5683b1e4f1a30423 SHA256 a1bac05e6886b3f3ebcf0d420bf052de529c194af48c12ab7ba681722ffd7455
+EBUILD gst-plugins-base-0.10.17.ebuild 1371 RMD160 8e86de2f2db8c04ddfdf7d0bb44d8a783d96f28a SHA1 f32fbc14c0f90e8c42ce265274800dd6438e8473 SHA256 53521abb881e9478e6e3a90bc6bf5f09160b5670f92ba6ceb8dfcf706ef5f9f4
+EBUILD gst-plugins-base-0.10.19.ebuild 1451 RMD160 73e948ac00df52c1022abde87e51709edf93dd1e SHA1 d8c156828efc30e3b59d6997a810a84da749839a SHA256 2bc587816a3819eb1c6645560aa665f75c60af4f09232dbd4ccbbac5e7cb4880
+MISC ChangeLog 10857 RMD160 c634bafd56119da8cf85e32371b66d063d481dc0 SHA1 aa65c2571d6cbdaf5af7a5a6e36250f30b6a79cb SHA256 5a9341e97f8862e932be0e015d701ef70f4ed372f52cc016f02f448519eae327
 MISC metadata.xml 162 RMD160 c6078d82a9ff46dbb283bc14ade9d117144cca67 SHA1 f46f8ccd62374b17183b5aca523c4dcf60d718f9 SHA256 3ac891ee23de8c6e2bef32e0c7aa3e6607e808de76ed723fbe7a1fb92f6093f1
