@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gst-plugins-base
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.78 2008/04/15 11:48:51 zaheerm Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.79 2008/05/14 16:40:42 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  gst-plugins-base-0.10.19.ebuild:
+  Added ~ppc64
 
 *gst-plugins-base-0.10.19 (15 Apr 2008)
 
